name:                imj-game-tutorial-increment
version:             0.1.0.3
Category:            Game, Tutorial
Synopsis:            Tutorial
Description:         A tutorial game illustrating the usage of img-game library
                     to create a simple multiplayer game.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-game-tutorial-increment//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

executable imj-game-tutorial-increment-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.12
                     , attoparsec ==0.13.*
                     , binary ==0.8.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , imj-base ==0.1.*
                     , imj-server ==0.1.*
                     , imj-game ==0.1.*
                     , text >=1.2.3 && < 1.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-game-tutorial-increment
