name:                imj-interpolation-base
version:             0.1.0.0
Category:            Game Engine
Synopsis:            A library defining the DicretelyInterpolable class and some instances.
Description:         Allows to define interpolations, pure or IO-based, and provides
                     instances for types of package "imj-base" when the notion if interpolation is
                     well defined. If the type could lead to several different interpolations,
                     these will be in "imj-inteprolation" along with the definitions of their respective
                     wrapper types.
homepage:            https://github.com/OlivierSohn/hamazed/imj-interpolation-base#readme
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            GameEngine
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Color.Interpolate
                     , Ease
                     , Evolution
                     , Interpolation
  build-depends:       base >= 4.8 && < 4.11
                     , mtl
                     , text
                     , imj-base
                     , imj-draw
                     , imj-prelude
  default-language:    Haskell2010

test-suite imj-interpolation-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Ease
                     , Test.Interpolation
  main-is:             Spec.hs
  build-depends:       base
                     , ansi-terminal
                     , mtl
                     , text
                     , imj-base
                     , imj-draw
                     , imj-interpolation-base
                     , imj-render-naive-term
                     , imj-prelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/imj-interpolation-base
