name:                imj-interpolation-base
version:             0.1.0.0
Category:            Game Engine
Synopsis:            Library defining the DicretelyInterpolable class and some instances.
Description:         DicretelyInterpolable allows to define interpolations.
                     .

                     DicretelyInterpolable instances are implemented for types of
                     package "imj-base", only when the concept of interpolation is
                     well defined for the type. On the contrary, when the type could
                     lead to several different interpolations, wrapper types are
                     defined in "imj-inteprolation" along with the instance implementation.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-interpolation-base/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Color.Interpolate
                     , Imj.Ease
                     , Imj.Evolution
                     , Imj.Interpolation
  build-depends:       base >= 4.8 && < 4.11
                     , mtl >= 2.2.1 && < 2.3
                     , text ==1.2.*
                     , imj-base ==0.1.*
                     , imj-draw ==0.1.*
                     , imj-prelude ==0.1.*
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

test-suite imj-interpolation-base-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.Ease
                     , Test.Imj.Interpolation
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1 && < 2.3
                     , text ==1.2.*
                     , imj-base ==0.1.*
                     , imj-draw ==0.1.*
                     , imj-interpolation-base
                     , imj-render-naive-term ==0.1.*
                     , imj-prelude ==0.1.*
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-interpolation-base
