name:                imj-interpolation
version:             0.1.0.0
Category:            GameEngine
Synopsis:            Interpolations for UI elements.
Description:         Interpolations to smoothly transform UI elements.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-interpolation//README.md
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     UI.FrameAnimationParallel4
  build-depends:       base >= 4.8 && < 4.11
                     , mtl >= 2.2.1 && < 2.3
                     , imj-base
                     , imj-draw
                     , imj-interpolation-base
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

test-suite imj-interpolation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
