name:                imj-measure-stdout
version:             0.1.0.3
Category:            Console, Terminal
Synopsis:            An application to determine the maximum capacity of stdout buffer.
Description:         The program helps you determine the maximum capacity of your stdout buffer.
                     .

                     It was initially developped to diagnose screen tearing issues
                     in a terminal-based game I was developping, and more specifically, to see the
                     effect of the following action :
                     .

                     > hSetBuffering stdout $ BlockBuffering $ Just maxBound
                     .

                     Using this program, I found that, on my system, the previous call quadruples
                     stdout's capacity, from 2048 to 8192 bytes.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-measure-stdout/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.2.2, GHC == 8.4.3

executable imj-measure-stdout-exe
  -- https://gitlab.haskell.org/ghc/ghc/-/issues/11829
  if os(darwin)
    ld-options: -Wl,-keep_dwarf_unwind
  hs-source-dirs:      app, src
  main-is:             Main.hs
  other-modules:       Imj.Measure.Stdout
  build-depends:       base >= 4.9 && < 4.16
                     , imj-prelude ==0.1.*
                     , imj-time ==0.1.*
                     , optparse-applicative >=0.14 && < 0.17
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-measure-stdout
