name:                imj-music-demo
version:             0.1.0.3
Category:            Audio, Music
Synopsis:            A demo of imj-music.
Description:         Executable demonstrating the use of the imj-music library.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-music-demo//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

-- this doesn't link with this clang version:
--
-- stack --resolver lts-11.9 exec -- gcc --version
-- Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
-- ++echo 'Apple LLVM version 8.1.0 (clang-802.0.42)
-- Target: x86_64-apple-darwin16.7.0
-- Thread model: posix
-- InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin'
--
-- but it' ok with:
-- stack --resolver lts-11.9 exec -- gcc --version
-- Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
-- Apple LLVM version 9.1.0 (clang-902.0.39.2)
-- Target: x86_64-apple-darwin17.6.0
-- Thread model: posix
-- InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
executable imj-music-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-music ==0.1.*
                     , imj-prelude ==0.1.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-music-demo
