name:                imj-music
version:             0.1.0.3
Category:            Audio, Music
Synopsis:            A library to play music.
Description:         Functions to create music scores and play them.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-music//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Music.Compose
                     , Imj.Music.Play
                     , Imj.Music.Types
  build-depends:       base >= 4.9 && < 4.12
                     , binary == 0.8.*
                     , deepseq ==1.4.*
                     , imj-bindings-audio ==0.1.*
                     , parsec ==3.1.*
                     , template-haskell >=2.12 && < 2.14
                     , text >=1.2.3 && < 1.3
                     , vector >= 0.12.0.1 && < 0.13
  default-language:    Haskell2010



test-suite imj-music-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Imj.ParseMusic
  main-is:             Spec.hs
  build-depends:       base >= 4.9 && < 4.12
                     , imj-music
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-music
