name:                imj-prelude
version:             0.1.0.3
Category:            Game Engine
Synopsis:            Prelude library.
Description:         Library of commonly used functions and types.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-prelude/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Prelude
  build-depends:       base >= 4.8 && < 4.12
                     , binary == 0.8.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , mtl >= 2.2.1 && < 2.3
                     , text >=1.2.3 && < 1.3
                     , pretty-show >=1.6 && < 1.8
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-prelude
