name:                imj-profile
version:             0.1.0.3
Category:            Application
Synopsis:            Profiling tool.
Description:         An executable used to profil some parts of the program
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-profile//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2

executable imj-profile-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -threaded -rtsopts -with-rtsopts=-maxN4
                     -fexcess-precision -optc-ffast-math
  build-depends:       base >= 4.8 && < 4.11
                     , imj-game-hamazed ==0.1.*
                     , imj-prelude ==0.1.*
                     , mwc-random ==0.13.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-profile
