name:                imj-profile
version:             0.1.0.3
Category:            Application
Synopsis:            Profiling tool.
Description:         An executable used to profile some parts of the program
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-profile//README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 - 2018 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2, GHC == 8.2.2


library
  hs-source-dirs:      src
  exposed-modules:     Imj.File
                     , Imj.Random.MWC.Seeds
                     , Imj.Profile.Render
                     , Imj.Profile.Render.Characters
                     , Imj.Profile.Render.Clay
                     , Imj.Profile.Render.Blaze
                     , Imj.Profile.Result
  other-modules:
  build-depends:       base >= 4.8 && < 4.11
                     , blaze-html ==0.9.*
                     , bytestring == 0.10.*
                     , clay ==0.12.*
                     , containers ==0.5.*
                     , directory ==1.3.*
                     , filepath ==1.4.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , text >=1.2.3 && < 1.3
                     , time ==1.8.*
  default-language:    Haskell2010


executable imj-profile-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.8 && < 4.11
                     , async ==2.1.*
                     , containers ==0.5.*
                     , deepseq ==1.4.*
                     , imj-game-hamazed ==0.1.*
                     , imj-base ==0.1.*
                     , imj-prelude ==0.1.*
                     , imj-profile
                     , mwc-random ==0.13.*
                     , stm ==2.4.*
                     , strict-concurrency ==0.2.*
                     , text >=1.2.3 && < 1.3
                     , unix ==2.7.*
                     , vector >= 0.12.0.1 && < 0.13
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-profile
