name:                imj-render-delta-term
version:             0.1.0.0
Category:            Game-Renderer
Synopsis:            Delta rendering for the terminal.
Description:         A terminal render engine that mitigates screen tearing when
                     rendering complex game graphics, by minimizing the amount
                     of data sent to stdout.
homepage:            https://github.com/OlivierSohn/hamazed/imj-render-delta-term#README
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Render.Delta
                     , Render.Delta.Buffers
                     , Render.Delta.Buffers.Dimensions
                     , Render.Delta.Cell
                     , Render.Delta.Cells
                     , Render.Delta.Clear
                     , Render.Delta.Console
                     , Render.Delta.DefaultPolicies
                     , Render.Delta.DynUnboxedVec
                     , Render.Delta.Draw
                     , Render.Delta.Env
                     , Render.Delta.Flush
                     , Render.Delta.Internal.Types
                     , Render.Delta.Types
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal
                     , primitive
                     , terminal-size
                     , text
                     , vector
                     , vector-algorithms
                     , imj-base
                     , imj-draw
                     , imj-engine
                     , imj-prelude
  default-language:    Haskell2010

test-suite imj-render-delta-term-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Stdout
                     , Test.Vector
  main-is:             Spec.hs
  build-depends:       base
                     , imj-prelude
                     , imj-render-delta-term
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/imj-render-delta-term
