name:                imj-render-delta-term
version:             0.1.0.0
Category:            Game-Renderer
Synopsis:            Delta rendering for the terminal.
Description:         A terminal render engine that mitigates screen tearing when
                     rendering complex game graphics, by minimizing the amount
                     of data sent to stdout.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-render-delta-term/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Render.Delta
                     , Render.Delta.Buffers
                     , Render.Delta.Buffers.Dimensions
                     , Render.Delta.Cell
                     , Render.Delta.Cells
                     , Render.Delta.Clear
                     , Render.Delta.Console
                     , Render.Delta.DefaultPolicies
                     , Render.Delta.DynUnboxedVec
                     , Render.Delta.Draw
                     , Render.Delta.Env
                     , Render.Delta.Flush
                     , Render.Delta.Internal.Types
                     , Render.Delta.Types
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal >= 0.6.3.1
                     , primitive ==0.6.*
                     , terminal-size >= 0.3.2.1 && < 0.3.3
                     , text ==1.2.*
                     , vector >= 0.12.0.1 && < 0.12.1
                     , vector-algorithms >= 0.7.0.1 && < 0.8
                     , imj-base ==0.1.*
                     , imj-draw ==0.1.*
                     , imj-prelude ==0.1.*
  ghc-options:       -Wall -Werror -fpedantic-bottoms -Wredundant-constraints
                     -threaded -rtsopts -with-rtsopts=-maxN4
                     -O2 -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

test-suite imj-render-delta-term-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       Test.Stdout
                     , Test.Vector
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.11
                     , imj-prelude ==0.1.*
                     , imj-render-delta-term ==0.1.*
  ghc-options:       -Wall -Werror -fpedantic-bottoms -Wredundant-constraints
                     -threaded -rtsopts -with-rtsopts=-maxN4
                     -O2 -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-render-delta-term
