name:                imj-render-naive-term
version:             0.1.0.0
Category:            Game-Renderer
Synopsis:            A mock renderer, for tests only. Use imj-render-delta-term for production.
Description:         For tests only. Please use imj-render-delta-term for optimized rendering.
homepage:            https://github.com/OlivierSohn/hamazed/imj-render-naive-term#README
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Render.Naive
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal
                     , mtl
                     , text
                     , imj-base
                     , imj-draw
                     , imj-prelude
  default-language:    Haskell2010

test-suite imj-render-naive-term-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base
                     , imj-prelude
                     , imj-render-delta-term
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/imj-render-naive-term
