name:                imj-render-naive-term
version:             0.1.0.0
Category:            Game-Renderer
Synopsis:            Library containing a mock renderer, for tests only.
Description:         Please use imj-render-delta-term for optimized rendering. This
                     is a simple implementation that is both very slow in comparison, and that
                     leads to screen tearing.
homepage:            https://github.com/OlivierSohn/hamazed/blob/master/imj-render-naive-term/README.md
bug-reports:         https://github.com/OlivierSohn/hamazed/issues/
license:             BSD3
license-file:        LICENSE
author:              Olivier Sohn
maintainer:          olivier.sohn@gmail.com
copyright:           2017 Olivier Sohn
build-type:          Simple
extra-source-files:  README.md CHANGELOG.md
cabal-version:       >=1.10

Tested-With: GHC == 8.0.2

library
  hs-source-dirs:      src
  other-modules:
  exposed-modules:     Imj.Render.Naive
  build-depends:       base >= 4.8 && < 4.11
                     , ansi-terminal >= 0.6.3.1
                     , mtl >= 2.2.1 && < 2.3
                     , text ==1.2.*
                     , imj-base ==0.1.*
                     , imj-draw ==0.1.*
                     , imj-prelude ==0.1.*
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -O2 -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

test-suite imj-render-naive-term-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 4.11
  ghc-options:       -Wall -fpedantic-bottoms -Wredundant-constraints
                     -O2 -fexcess-precision -optc-ffast-math
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/OlivierSohn/hamazed/
  subdir:   imj-render-naive-term
